--- a/ui/BufferWidget.ui
+++ b/ui/BufferWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>384</width>
-    <height>232</height>
+    <width>816</width>
+    <height>678</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,27 +29,94 @@
    <property name="spacing">
     <number>0</number>
    </property>
-   <item row="0" column="2" rowspan="3">
+   <item row="0" column="1">
     <widget class="QScrollBar" name="scrollBarVertical">
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
      <property name="styleSheet">
-      <string notr="true">QScrollBar, QScrollBar::add-page, QScrollBar::sub-page
+      <string notr="true">QScrollBar:vertical
 {
-    border: solid black;
-    background-color: rgb(38, 50, 56);
+    background-color: transparent;
+    width: 16px;
 }
-QScrollBar::handle
+
+QScrollBar::handle:vertical
 {
-    min-height: 30;
-    border: 2px solid black;
-    color: rgb(30, 42, 48);
+    background-color: rgb(46, 58, 62);
+    min-height: 20px;
+    border-radius: 3px;
+	margin: 2px;
 }
-QScrollBar::add-line, QScrollBar::sub-line
+
+QScrollBar::handle:vertical:pressed
 {
-    height: 0px;
+    background-color: rgb(58, 70, 74);
+    min-height: 20px;
+    border-radius: 3px;
+	margin: 2px;
 }
-QScrollBar::add-page, QScrollBar::sub-page
+
+QScrollBar::handle:vertical:hover:!pressed
 {
-    border: 1px solid black;
+    background-color: rgb(50, 62, 66);
+    min-height: 20px;
+    border-radius: 3px;
+	margin: 2px;
+}
+
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
+{
+	background-color: transparent;
+}
+
+QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical
+{
+	background-color: transparent;
+	width: 0px;
+	height: 0px;
+}
+
+QScrollBar:horizontal
+{
+    background-color: transparent;
+    height: 16px;
+}
+
+QScrollBar::handle:horizontal
+{
+    background-color: rgb(46, 58, 62);
+    min-width: 20px;
+    border-radius: 3px;
+	margin: 2px;
+}
+
+QScrollBar::handle:horizontal:pressed
+{
+    background-color: rgb(58, 70, 74);
+    min-width: 20px;
+    border-radius: 3px;
+	margin: 2px;
+}
+
+QScrollBar::handle:horizontal:hover:!pressed
+{
+    background-color: rgb(50, 62, 66);
+    min-width: 20px;
+    border-radius: 3px;
+	margin: 2px;
+}
+
+QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
+{
+	background-color: transparent;
+}
+
+QScrollBar::add-line:horizontal, QScrollBar::sub-line:horizontal
+{
+	background-color: transparent;
+	width: 0px;
+	height: 0px;
 }</string>
      </property>
      <property name="orientation">
@@ -58,57 +125,101 @@ QScrollBar::add-page, QScrollBar::sub-page
     </widget>
    </item>
    <item row="1" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="1">
-    <spacer name="spacerWidget">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="3" column="0" colspan="2">
     <widget class="QScrollBar" name="scrollBarHorizontal">
      <property name="styleSheet">
-      <string notr="true">QScrollBar, QScrollBar::add-page, QScrollBar::sub-page
+      <string notr="true">QScrollBar:vertical
 {
-    border: solid black;
-    background-color: rgb(38, 50, 56);
+    background-color: transparent;
+    width: 16px;
 }
-QScrollBar::handle
+
+QScrollBar::handle:vertical
 {
-    min-height: 30;
-    min-width: 30;
-    border: 2px solid black;
-    color: rgb(30, 42, 48);
+    background-color: rgb(46, 58, 62);
+    min-height: 20px;
+    border-radius: 3px;
+	margin: 2px;
 }
-QScrollBar::add-line, QScrollBar::sub-line
+
+QScrollBar::handle:vertical:pressed
 {
-    height: 0px;
+    background-color: rgb(58, 70, 74);
+    min-height: 20px;
+    border-radius: 3px;
+	margin: 2px;
 }
-QScrollBar::add-page, QScrollBar::sub-page
+
+QScrollBar::handle:vertical:hover:!pressed
 {
-    border: 1px solid black;
+    background-color: rgb(50, 62, 66);
+    min-height: 20px;
+    border-radius: 3px;
+	margin: 2px;
+}
+
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
+{
+	background-color: transparent;
+}
+
+QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical
+{
+	background-color: transparent;
+	width: 0px;
+	height: 0px;
+}
+
+QScrollBar:horizontal
+{
+    background-color: transparent;
+    height: 16px;
+}
+
+QScrollBar::handle:horizontal
+{
+    background-color: rgb(46, 58, 62);
+    min-width: 20px;
+    border-radius: 3px;
+	margin: 2px;
+}
+
+QScrollBar::handle:horizontal:pressed
+{
+    background-color: rgb(58, 70, 74);
+    min-width: 20px;
+    border-radius: 3px;
+	margin: 2px;
+}
+
+QScrollBar::handle:horizontal:hover:!pressed
+{
+    background-color: rgb(50, 62, 66);
+    min-width: 20px;
+    border-radius: 3px;
+	margin: 2px;
+}
+
+QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
+{
+	background-color: transparent;
+}
+
+QScrollBar::add-line:horizontal, QScrollBar::sub-line:horizontal
+{
+	background-color: transparent;
+	width: 0px;
+	height: 0px;
 }</string>
      </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QWidget" name="dummyWidget" native="true">
+     <property name="enabled">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
